--- a/style3.css
+++ b/style3.css
@@ -43,7 +43,7 @@ display: inline;}
 
 ul {list-style-type: circle;
   font-family: 'Montserrat',serif;
-font-size: 16px}
+  font-size: 16px;}
 
 
 .button {
